# HyperDrive-Editor

./: .gitignore  HyperDrive.spec  README.md  app.py  build.bat  hyperdrive_installer.iss  index.html  package-lock.json  package.json  settings.json  tsconfig.json  vite.config.ts
.github/workflows/: build-vscode.yml  build.yml
hyperdrive/: .gitignore  ARCHITECTURE.md  HyperDrive.spec  app.py  build.ps1  debug_dom.cjs  fix_css.py  hyperdrive_installer.iss  hyperdrive_installer_local.iss  requirements.txt  settings.json
hyperdrive/api/: ai_tool.py  extension_tool.py  fs_tool.py  git_tool.py  preview_tool.py
hyperdrive/scratch/: test_smooth_engine.py
hyperdrive/scripts/: HyperDriveDev.pfx  benchmark.js  build-msix.ps1  create-cert.ps1  dev.ps1  sign-msix.ps1
hyperdrive/src-cpp/: build_engine.py  smooth_engine.cpp
hyperdrive/www/: index.html
scripts/: generate-icon.js
src/: App.tsx  main.tsx
src-cpp/: smooth_engine.cpp  smooth_engine.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  git.rs  mod.rs  pty.rs
src/components/: NotificationOverlay.tsx  WorkspaceLayout.tsx
src/lib/: editorCommands.ts  gitIntegration.ts  lspClient.ts  ollama.ts  pieceTable.ts  projectTemplates.ts  rules.ts  tauriCheck.ts  tauriDialog.ts  tauriFS.ts
src/screens/: WelcomeScreen.tsx
src/store/: editorStore.ts  extensionsStore.ts  fileStore.ts  localExtensionsStore.ts  notificationStore.ts  settingsStore.ts
src/styles/: ai-panel.css  (+6 more)
vs code/: README.md  package.json  product.json
(+32 files in other folders)
