[package]
name = "hyperdrive"
version = "1.0.0"
description = "HyperDrive Code Editor Backend"
authors = ["Amit"]
edition = "2021"

[lib]
name = "hyperdrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
portable-pty = "0.8.1"
git2 = { version = "0.20.0", default-features = false, features = ["vendored-libgit2"] }
tokio = { version = "1.43.0", features = ["full"] }
